--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "preview:4173": "vite preview --port 4173 --host 0.0.0.0"
   },
   "dependencies": {
-    "recharts": "^3.6.0",
+    "@supabase/supabase-js": "^2.97.0",
+    "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "react": "^19.2.3"
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
